elucid/elucid-language/src/semantic/snapshots/elucid_language__semantic__expression__tests__binary_expression_tree.snap
---
source: elucid-language/src/semantic/expression.rs
expression: result
---
Binary(
    GreaterThan,
    Binary(
        Add,
        Field(
            IrFieldRef {
                name: "a",
            },
        ),
        Field(
            IrFieldRef {
                name: "b",
            },
        ),
    ),
    Literal(
        Number(
            10.0,
        ),
    ),
)
