elucid/elucid-language/src/semantic/snapshots/elucid_language__semantic__expression__tests__function_call_sum.snap
---
source: elucid-language/src/semantic/expression.rs
expression: result
---
Call(
    "sum",
    [
        Field(
            IrFieldRef {
                name: "bytes",
            },
        ),
    ],
)
