elucid/elucid-language/src/semantic/snapshots/elucid_language__semantic__expression__tests__nested_not.snap
---
source: elucid-language/src/semantic/expression.rs
expression: result
---
Not(
    Binary(
        And,
        Field(
            FieldRef {
                name: "a",
            },
        ),
        Field(
            FieldRef {
                name: "b",
            },
        ),
    ),
)
